--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,26 +1,29 @@
-name: 'jaffle_shop'
-
+name: jaffle_shop
 config-version: 2
-version: '0.1'
-
-profile: 'jaffle_shop'
-
-model-paths: ["models"]
-seed-paths: ["seeds"]
-test-paths: ["tests"]
-analysis-paths: ["analysis"]
-macro-paths: ["macros"]
-
-target-path: "target"
+version: "0.1"
+profile: jaffle_shop
+model-paths:
+  - models
+seed-paths:
+  - seeds
+test-paths:
+  - tests
+analysis-paths:
+  - analysis
+macro-paths:
+  - macros
+target-path: target
 clean-targets:
-    - "target"
-    - "dbt_modules"
-    - "logs"
-
-require-dbt-version: [">=1.0.0", "<2.0.0"]
-
+  - target
+  - dbt_modules
+  - logs
+require-dbt-version:
+  - ">=1.0.0"
+  - <2.0.0
 models:
   jaffle_shop:
-      materialized: table
-      staging:
-        materialized: view
+    materialized: table
+    staging:
+      materialized: view
+    +post-hook:
+      - "{{ row_count() }}"
